# spectral-memory-fno

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
configs/analysis/: m10_navier_stokes2d_cost_smoke.yaml  m11_navier_stokes2d_v2_cost_smoke.yaml  m9_cost_efficiency_smoke.yaml
configs/data/: burgers1d.yaml  heat1d.yaml  navier_stokes2d.yaml  navier_stokes2d_dynamic.yaml  navier_stokes2d_medium.yaml
configs/experiment/: burgers1d_fno_rollout20.yaml  burgers1d_fno_smoke.yaml  burgers1d_sm_fno.yaml  burgers1d_sm_fno_rollout20.yaml  burgers1d_sm_fno_smoke.yaml  burgers1d_transformer_rollout20.yaml  burgers1d_transformer_smoke.yaml  heat1d_fno_rollout20.yaml  heat1d_fno_smoke.yaml  heat1d_mlp_rollout20.yaml  heat1d_mlp_smoke.yaml  (+22 more)
docs/: 00_project_overview.md  01_mathematical_foundation.md  02_fourier_neural_operator.md  03_state_space_model.md  04_attention_baseline.md  05_experiment_protocol.md  06_public_release_checklist.md
scripts/: aggregate_cost_metrics.py  aggregate_metrics.py  create_m18_presentation_artifacts.py  evaluate.py  generate_cost_efficiency_report.py  generate_data.py  generate_protocol_report.py  plot_cost_efficiency.py  plot_results.py  run_dynamic_skill_diagnostics.py  run_horizon_sweep.py  run_repeated_seeds.py  run_smoke_test.py  train.py  visualize_navier_stokes2d_3d.py
tests/: test_burgers1d_data.py  test_dynamic_skill.py  test_heat1d_data.py  test_imports.py  test_m6_protocol.py  test_m9_cost_efficiency.py  test_metrics.py  test_navier_stokes2d_data.py  test_navier_stokes2d_visualization.py  test_shapes.py
(+97 files in other folders)
