[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-memory-fno"
version = "0.1.0"
description = "Research scaffold for attention-free long-horizon PDE forecasting with Fourier Neural Operators and State Space Memory."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "TODO" }
]
dependencies = [
  "torch",
  "numpy",
  "matplotlib",
  "pyyaml",
  "tqdm"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]
